Upgrade to Java 17 (#1197)